[package]
name = "remote_test_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
# These are for your main code (src/main.rs)
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
async-trait = "0.1"

[build-dependencies]
# This is specifically for your build script (build.rs)
tonic-build = "0.11"
